--- a/views/userView/home.ejs
+++ b/views/userView/home.ejs
@@ -101,19 +101,29 @@
     <!-- Header Section End -->
 
     <!-- Hero Section Begin -->
+
     <section class="hero">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-5 col-lg-7 col-md-8">
-                    <div class="hero__slider owl-carousel">
-                        <div class="hero__items set-bg" data-setbg="img/hero/soul.1.webp">
-                            <div class="hero__text">
-                                <!-- Content for first slide -->
-                            </div>
+        <div class="hero__slider owl-carousel">
+            <div class="hero__items set-bg" data-setbg="img/hero/soul.1.webp">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-5 col-lg-7 col-md-8">
+                            
                         </div>
-                        <div class="hero__items set-bg" data-setbg="/img/hero/soul.2.png">
+                    </div>
+                </div>
+            </div>
+            <div class="hero__items set-bg" data-setbg="/img/hero/soul.2.png">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-5 col-lg-7 col-md-8">
                             <div class="hero__text">
-                                <!-- Content for second slide -->
+                                <h6>New Collection</h6>
+                                <h2>Fall - Winter New Collection</h2>
+                                <p>A specialist label creating luxury essentials. Ethically crafted with an unwavering
+                                commitment to exceptional quality.</p>
+                               
+                                
                             </div>
                         </div>
                     </div>
