--- a/views/userView/profile.ejs
+++ b/views/userView/profile.ejs
@@ -192,7 +192,7 @@
 
     <div class="container light-style flex-grow-1 container-p-y">
       <h4 class="font-weight-bold py-3 mb-4">Account settings</h4>
-      <button class="btn btn-success mb-2"  id="ref" data-link="http://localhost:3000/register?refCode=<%= user.refCode %>" onclick="copylink()"> Click To Copy Referal Code</button>
+      <button class="btn btn-success mb-2"  id="ref" data-link="https://www.solesavvy.site/register?refCode=<%= user.refCode %>" onclick="copylink()"> Click To Copy Referal Code</button>
       <div class="card overflow-hidden">
         
 
